Make origins an array